# 3d-engine

./: .gitignore  CMakeLists.txt  main.c  shader.frag  shader.vert
GLFW/lib/: READ ME.txt
